# cg-opengl-base

./: .gitignore  CMakeLists.txt  README.md  build.bat
.github/: copilot-instructions.md
.github/workflows/: build.yml
include/: Application.h  Camera.h  Renderer.h  Shader.h
shaders/: fragment.glsl  fragment_2d.glsl  vertex.glsl  vertex_2d.glsl
src/: Application.cpp  CMakeLists.txt  Camera.cpp  Renderer.cpp  Shader.cpp  main.cpp
